# Davinci-MagicSAMask

./: README.md  install.py  pyproject.toml
sam3_resolve/: __init__.py  config.json  config.py  constants.py  plugin_main.py
sam3_resolve/core/: __init__.py  gpu_utils.py  mask_exporter.py  media_handler.py  resolve_bridge.py  sam3_runner.py  text_detector.py
sam3_resolve/ui/: __init__.py  canvas_widget.py  log_panel.py  main_window.py  object_panel.py  preview_player.py  settings_panel.py  setup_wizard.py  styles.qss  workers.py
tests/: test_canvas_widget.py  test_config.py  test_gpu_utils.py  test_install.py  test_integration.py  test_log_panel.py  test_main_window.py  test_mask_exporter.py  test_media_handler.py  test_preview_player.py  test_resolve_bridge.py  test_resolve_path.py  test_sam3_runner.py  test_settings_panel.py  test_setup_wizard.py
